--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <img src="./res/img/cookie.png" alt="cookie.png" id="cookie">
     <p id="counter">0</p>
-    <button id="clickerupgrade">Buy click upgrade: 50</button>
+    <button id="clickerupgrade">Buuy click upgrade: 50</button>
     <button id="autoclicker">Buy autoclicker:100</button>
 <script src="./res/js/main.js"></script>
   </body>
